# reporting-python

./: .gitignore  README.md  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Examples/: SimpleTest1.rdl  test1.py  test2-parameters.py  test3-streaming.py  test4-export-multiple-formats.py  test5-set-data-from-code.py
scripts/: build-native-wheel.sh
src/majorsilence_reporting/: __init__.py  report.py  report_aot.py  report_native.py
src/majorsilence_reporting/native/: .gitignore
tests/: test_report_native.py
