[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "majorsilence-reporting"
version = "1.0.0"
description = "Python wrappers for Majorsilence Reporting (.NET)"
license = { text = "LGPL-2.1" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"majorsilence_reporting" = ["native/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
