[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "majorsilence-reporting"
version = "26.0.0"
description = "Python bindings for Majorsilence Reporting — render RDL reports to PDF, Excel, HTML and more via an in-process native library or subprocess runner"
readme = "README.md"
license = { text = "MIT OR Apache-2.0 OR BSD-2-Clause" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"majorsilence_reporting" = ["native/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
